gccida/c3/dbxout_finish_symbol
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_finish_symbol/src/dbxout.c:2877:20: error: use of undeclared identifier 'off_607A24'
fprintf( asmfile, &off_607A24[1], ( unsigned int)current_sym_value); 
                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dbxout_finish_symbol/src/obj/dbxout.o] Error 1
